Etappentitel, drei Absätze, formatiert

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neuseelandreise</title>
 </head>
+
 <body>
     <h1>Neuseelandreise</h1>
+    <h2>Picton</h2>
+    <p> Picton ist eine Hafenstadt im Marlborough District auf der Südinsel von Neuseeland.</p>
+
+    <p>Die Stadt befindet sich rund 25 km nördlich von Blenheim am Picton Harbour, einem Meeresarm des Queen Charlotte
+        Sound. Eingebettet zwischen bis zu 727 m hohen Bergen im Westen und bis zu 970 m hohen Bergen im Osten, liegt
+        die Stadt in einem nach Norden hin offenen Talkessel, in dem sich der Waitahi River nach Norden durch die Stadt
+        schlängelt und nahe dem Fährterminal der Stadt in den Picton Harbour mündet.</p>
+
+    <p>Zum Zensus des Jahres 2013 zählte die Stadt 2745 Einwohner, 6,3 % weniger als zur Volkszählung im Jahr 2006.</p>
+
 </body>
+
 </html>
