--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Neuseelandreise</h1>
     <h2>Picton</h2>
-    <p> Picton ist eine Hafenstadt im Marlborough District auf der Südinsel von Neuseeland.</p>
+    <p> <strong>Picton</strong> ist eine Hafenstadt im Marlborough District auf der <em>Südinsel von Neuseeland</em> </p>
 
     <p>Die Stadt befindet sich rund 25 km nördlich von Blenheim am Picton Harbour, einem Meeresarm des Queen Charlotte
         Sound. Eingebettet zwischen bis zu 727 m hohen Bergen im Westen und bis zu 970 m hohen Bergen im Osten, liegt
