--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
     <p>Zum Zensus des Jahres 2013 zählte die Stadt 2745 Einwohner, 6,3 % weniger als zur Volkszählung im Jahr 2006.</p>
     <p><a href="https://de.wikipedia.org/wiki/Picton_(Neuseeland)">Quelle Wikipedia</a></p>
 
+    <h3>Hafen von Picton</h3>
+
+    <figure>
+        <img src="images/attraction.jpg" alt="Hafen von Picton mit Frachtschiff">
+        <figcaption>Frachtschiff im Hafen von Picton (Quelle: <a href="https://pixabay.com/de/photos/f%C3%A4hre-hafen-dock-schiff-meer-2039040/">  Kiwi_Lisa@pixabay  </a>)</figcaption>
+    </figure>
+
+    <h3>Links</h3>
+
+    <ul>
+        <li><a href="https://www.newzealand.com/de/picton/"> Website Neuseeland</a></li>
+        <li><a href="https://www.booking.com/city/nz/picton.de.html?aid=349015&pagename=picton&label=msn-AZlaeJW6c9Z4FBMn5HXWfw-80127083374273:tikwd-80127237108792:loc-10:neo:mte:lp146440:dec:qspicton&utm_campaign=New%20Zealand&utm_medium=cpc&utm_source=bing&utm_term=AZlaeJW6c9Z4FBMn5HXWfw&msclkid=2116bc1233fa1216bb0fd9fbcb7ab46f&utm_content=Picton%20-%20UFI%3A900039049"> Hotels in Picton </a></li>
+        <li><a href="https://www.getyourguide.de/-l32311/?cmp=bing&cmp=bing&ad_id=78134249582996&adgroup_id=1250145369335975&bid_match_type=be&campaign_id=710111671&device=c&feed_item_id=&keyword=picton&loc_interest_ms=2500&loc_physical_ms=146440&match_type=e&msclkid=b6e130154b041e04159955fcb3848eba&network=o&partner_id=CD951&target_id=kwd-78134458420535&utm_adgroup=lc%3D32311%3Apicton%7Cfn%3Df3%7Cci%3D937%3Athings%20to%20do&utm_campaign=dc%3D7%3Anz%7Clc%3D32311%3Apicton%7Cct%3Dcore%7Cln%3D39%3Ade%7Ctc%3Dall&utm_keyword=picton&utm_medium=paid_search&utm_query=picton&utm_source=bing"> Aktivitäten in Picton buchen</a></li>
+    </ul>
+
+    <nav>
+        <a href="">vorhergehende Etappe</a>
+    </nav>
 </body>
 
 </html>
