vorherige und nächste Etappe Links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     </ul>
 
     <nav>
-        <a href="">vorhergehende Etappe</a>
+        <a href="https://webmapping.github.io/nz">vorhergehende Etappe</a>
+        <a href="https://ernstanton.github.io/nz"> diese Etappe</a>
+        <a href="https://annagruber263.github.io/nz"> nächste Etappe</a>
     </nav>
 </body>
 
