main article eingefügt

--- a/index.html
+++ b/index.html
@@ -8,38 +8,53 @@
 </head>
 
 <body>
-    <h1>Neuseelandreise</h1>
-    <h2>Picton</h2>
-    <p> <strong>Picton</strong> ist eine Hafenstadt im Marlborough District auf der <em>Südinsel von Neuseeland</em> </p>
+    <main>
+        <article>
+            <h1>Neuseelandreise</h1>
+            <h2>Picton</h2>
+            <p> <strong>Picton</strong> ist eine Hafenstadt im Marlborough District auf der <em>Südinsel von
+                    Neuseeland</em> </p>
 
-    <p>Die Stadt befindet sich rund 25 km nördlich von Blenheim am Picton Harbour, einem Meeresarm des Queen Charlotte
-        Sound. Eingebettet zwischen bis zu 727 m hohen Bergen im Westen und bis zu 970 m hohen Bergen im Osten, liegt
-        die Stadt in einem nach Norden hin offenen Talkessel, in dem sich der Waitahi River nach Norden durch die Stadt
-        schlängelt und nahe dem Fährterminal der Stadt in den Picton Harbour mündet.</p>
+            <p>Die Stadt befindet sich rund 25 km nördlich von Blenheim am Picton Harbour, einem Meeresarm des Queen
+                Charlotte
+                Sound. Eingebettet zwischen bis zu 727 m hohen Bergen im Westen und bis zu 970 m hohen Bergen im Osten,
+                liegt
+                die Stadt in einem nach Norden hin offenen Talkessel, in dem sich der Waitahi River nach Norden durch
+                die Stadt
+                schlängelt und nahe dem Fährterminal der Stadt in den Picton Harbour mündet.</p>
 
-    <p>Zum Zensus des Jahres 2013 zählte die Stadt 2745 Einwohner, 6,3 % weniger als zur Volkszählung im Jahr 2006.</p>
-    <p><a href="https://de.wikipedia.org/wiki/Picton_(Neuseeland)">Quelle Wikipedia</a></p>
+            <p>Zum Zensus des Jahres 2013 zählte die Stadt 2745 Einwohner, 6,3 % weniger als zur Volkszählung im Jahr
+                2006.</p>
+            <p><a href="https://de.wikipedia.org/wiki/Picton_(Neuseeland)">Quelle Wikipedia</a></p>
 
-    <h3>Hafen von Picton</h3>
+            <h3>Hafen von Picton</h3>
 
-    <figure>
-        <img src="images/attraction.jpg" alt="Hafen von Picton mit Frachtschiff">
-        <figcaption>Frachtschiff im Hafen von Picton (Quelle: <a href="https://pixabay.com/de/photos/f%C3%A4hre-hafen-dock-schiff-meer-2039040/">  Kiwi_Lisa@pixabay  </a>)</figcaption>
-    </figure>
+            <figure>
+                <img src="images/attraction.jpg" alt="Hafen von Picton mit Frachtschiff">
+                <figcaption>Frachtschiff im Hafen von Picton (Quelle: <a
+                        href="https://pixabay.com/de/photos/f%C3%A4hre-hafen-dock-schiff-meer-2039040/">
+                        Kiwi_Lisa@pixabay </a>)</figcaption>
+            </figure>
 
-    <h3>Links</h3>
+            <h3>Links</h3>
 
-    <ul>
-        <li><a href="https://www.newzealand.com/de/picton/"> Website Neuseeland</a></li>
-        <li><a href="https://www.booking.com/city/nz/picton.de.html?aid=349015&pagename=picton&label=msn-AZlaeJW6c9Z4FBMn5HXWfw-80127083374273:tikwd-80127237108792:loc-10:neo:mte:lp146440:dec:qspicton&utm_campaign=New%20Zealand&utm_medium=cpc&utm_source=bing&utm_term=AZlaeJW6c9Z4FBMn5HXWfw&msclkid=2116bc1233fa1216bb0fd9fbcb7ab46f&utm_content=Picton%20-%20UFI%3A900039049"> Hotels in Picton </a></li>
-        <li><a href="https://www.getyourguide.de/-l32311/?cmp=bing&cmp=bing&ad_id=78134249582996&adgroup_id=1250145369335975&bid_match_type=be&campaign_id=710111671&device=c&feed_item_id=&keyword=picton&loc_interest_ms=2500&loc_physical_ms=146440&match_type=e&msclkid=b6e130154b041e04159955fcb3848eba&network=o&partner_id=CD951&target_id=kwd-78134458420535&utm_adgroup=lc%3D32311%3Apicton%7Cfn%3Df3%7Cci%3D937%3Athings%20to%20do&utm_campaign=dc%3D7%3Anz%7Clc%3D32311%3Apicton%7Cct%3Dcore%7Cln%3D39%3Ade%7Ctc%3Dall&utm_keyword=picton&utm_medium=paid_search&utm_query=picton&utm_source=bing"> Aktivitäten in Picton buchen</a></li>
-    </ul>
+            <ul>
+                <li><a href="https://www.newzealand.com/de/picton/"> Website Neuseeland</a></li>
+                <li><a
+                        href="https://www.booking.com/city/nz/picton.de.html?aid=349015&pagename=picton&label=msn-AZlaeJW6c9Z4FBMn5HXWfw-80127083374273:tikwd-80127237108792:loc-10:neo:mte:lp146440:dec:qspicton&utm_campaign=New%20Zealand&utm_medium=cpc&utm_source=bing&utm_term=AZlaeJW6c9Z4FBMn5HXWfw&msclkid=2116bc1233fa1216bb0fd9fbcb7ab46f&utm_content=Picton%20-%20UFI%3A900039049">
+                        Hotels in Picton </a></li>
+                <li><a
+                        href="https://www.getyourguide.de/-l32311/?cmp=bing&cmp=bing&ad_id=78134249582996&adgroup_id=1250145369335975&bid_match_type=be&campaign_id=710111671&device=c&feed_item_id=&keyword=picton&loc_interest_ms=2500&loc_physical_ms=146440&match_type=e&msclkid=b6e130154b041e04159955fcb3848eba&network=o&partner_id=CD951&target_id=kwd-78134458420535&utm_adgroup=lc%3D32311%3Apicton%7Cfn%3Df3%7Cci%3D937%3Athings%20to%20do&utm_campaign=dc%3D7%3Anz%7Clc%3D32311%3Apicton%7Cct%3Dcore%7Cln%3D39%3Ade%7Ctc%3Dall&utm_keyword=picton&utm_medium=paid_search&utm_query=picton&utm_source=bing">
+                        Aktivitäten in Picton buchen</a></li>
+            </ul>
 
-    <nav>
-        <a href="https://webmapping.github.io/nz">vorhergehende Etappe</a>
-        <a href="https://ernstanton.github.io/nz"> diese Etappe</a>
-        <a href="https://annagruber263.github.io/nz"> nächste Etappe</a>
-    </nav>
+            <nav>
+                <a href="https://webmapping.github.io/nz">vorhergehende Etappe</a>
+                <a href="https://ernstanton.github.io/nz"> diese Etappe</a>
+                <a href="https://annagruber263.github.io/nz"> nächste Etappe</a>
+            </nav>
+        </article>
+    </main>
 </body>
 
 </html>
