navigation in den footer verschoben

--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
                         Aktivitäten in Picton buchen</a></li>
             </ul>
 
+        </article>
+
+        <footer>
             <nav>
                 <a href="https://webmapping.github.io/nz">vorhergehende Etappe</a>
                 <a href="https://ernstanton.github.io/nz"> diese Etappe</a>
                 <a href="https://annagruber263.github.io/nz"> nächste Etappe</a>
             </nav>
-        </article>
+        </footer>
     </main>
 </body>
 
