--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <header>
-        
+  <img src="images/header.jpg" alt="Meer, Hügel und Wald bei Picton">  
+  <a href="https://github.com/webmapping/nz"><img src="images/user.jpg" alt="Vögel"></a>    
     </header>
     <main>
         <article>
