pfeile hinzugefügt bei den etappen unten

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <figure>
                 <img src="images/attraction.jpg" alt="Hafen von Picton mit Frachtschiff">
-                <figcaption>Frachtschiff im Hafen von Picton (Quelle: <a
+                <figcaption><i class="fa-solid fa-camera"></i>Frachtschiff im Hafen von Picton (Quelle: <a
                         href="https://pixabay.com/de/photos/f%C3%A4hre-hafen-dock-schiff-meer-2039040/">
                         Kiwi_Lisa@pixabay </a>)</figcaption>
             </figure>
@@ -63,9 +63,9 @@
     </main>
     <footer>
         <nav>
-            <a href="https://webmapping.github.io/nz">vorhergehende Etappe</a>
+            <a href="https://webmapping.github.io/nz"><i class="fa-solid fa-arrow-left"></i> vorhergehende Etappe</a>
             <a href="https://ernstanton.github.io/nz"> diese Etappe</a>
-            <a href="https://annagruber263.github.io/nz"> nächste Etappe</a>
+            <a href="https://annagruber263.github.io/nz">nächste Etappe <i class="fa-solid fa-arrow-right"></i></a>
         </nav>
 </body>
 
