--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <footer>
         <nav>
             <a href="https://webmapping.github.io/nz"><i class="fa-solid fa-arrow-left"></i> vorhergehende Etappe</a>
-            <a href="https://ernstanton.github.io/nz"> diese Etappe</a>
+            <a href="https://ernstanton.github.io/nz"><i class="fa-solid fa-house-user"></i> diese Etappe</a>
             <a href="https://annagruber263.github.io/nz">nächste Etappe <i class="fa-solid fa-arrow-right"></i></a>
         </nav>
 </body>
