--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <a href="https://ernstanton.github.io/nz"><i class="fa-solid fa-house-user"></i> diese Etappe</a>
             <a href="https://annagruber263.github.io/nz">nächste Etappe <i class="fa-solid fa-arrow-right"></i></a>
         </nav>
-</body>
+        </footer>
+    </body>
 
 </html>
